--- a/index.html
+++ b/index.html
@@ -7,31 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DOM</title>
   <!-- <link rel="stylesheet" href="./assets/css/reset.css" /> -->
+  <link rel="stylesheet" href="./assets/css/form.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- <script defer src="./assets/js/Slider.js"></script> -->
   <!-- <script src="./assets/js/slider-index.js" defer></script> -->
   <!-- <script defer src="./assets/js/sandbox.js"></script> -->
+  <!-- <script defer src="./assets/js/actorsData.js"></script> -->
   <!-- <script defer src="./assets/js/actors.js"></script> -->
-  <script defer src="./assets/js/actorsData.js"></script>
+  <script defer src="./assets/js/form.js"></script>
   <script defer src="./assets/js/index.js"></script>
 </head>
 
 <body>
 
-  <section id="actors">
-    <h1 class="actors-heading">actors</h1>
-    <ul class="cards-container" id="cards-container">
-      <!-- <li class="card-wrapper">
-        <article class="card-container">
-          <img class="card-photo"
-            src="https://www.filmibeat.com/img/popcorn/profile_photos/tom-cruise-20190610151455-4602.jpg"
-            alt="Tom Cruise">
-          <h2 class="card-name">tom cruise</h2>
-          <p class="card-info">july 3, 1962</p>
-        </article>
-      </li> -->
-    </ul>
-  </section>
+  <form action="" class="form" id="form">
+    <input type="text" name="text">
+    <input type="submit" value="send">
+  </form>
+  <div id="messagess"></div>
 
 </body>
 
